	================ 2.4.11 ==============
2004-10-03  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Set pubdate.
	
	* pygtk-gtkuimanager.xml (insert_action_group) Add details on pos
	param.
	(add_ui) Additional info on path param. Add info on type values.
	(new_merge_id) Add info on merge ids.
	

2004-09-28  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkalignment.xml (Description) Fix example description.

2004-09-18  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkactiongroup.xml (add_actions) (add_toggle_actions)
	(add_radio_actions) Clarify entry tuple field usage.

2004-09-15  John Finlay  <finlay@moeraki.com>

	* pygtk-gtktreeview.xml (set_search_equal_func) Note that the
	comparison function should return FALSE to indicate a match. (Thomas
	Mills Hinkle)

2004-09-06  John Finlay  <finlay@moeraki.com>

	* pygtk-gtkaction.xml (Properties) name property is construct only.

2004-08-11  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.html Bump version number.

	================ 2.4.10 ==============
2004-08-11  John Finlay  <finlay@moeraki.com>

	* pygtk2-ref.xml Set pubdate.
	
	* pygtk-gdkdisplay.xml pygtk-gdkdisplaymanager.xml
	* pygtk-gdkkeymap.xml pygtk-gdkpixbufloader.xml
	* pygtk-gdkscreen.xml pygtk-gtkaccelgroup.xml
	* pygtk-gtkaction.xml pygtk-gtkactiongroup.xml
	* pygtk-gtkadjustment.xml pygtk-gtkbutton.xml
	* pygtk-gtkcalendar.xml pygtk-gtkcelleditable.xml
	* pygtk-gtkcellrenderer.xml pygtk-gtkcellrenderertext.xml
	* pygtk-gtkcellrenderertoggle.xml pygtk-gtkcheckmenuitem.xml
	* pygtk-gtkcolorbutton.xml pygtk-gtkcolorselection.xml
	* pygtk-gtkcombobox.xml pygtk-gtkcontainer.xml
	* pygtk-gtkcurve.xml pygtk-gtkdialog.xml pygtk-gtkeditable.xml
	* pygtk-gtkentry.xml pygtk-gtkentrycompletion.xml
	* pygtk-gtkexpander.xml pygtk-gtkfilechooser.xml
	* pygtk-gtkfontbutton.xml pygtk-gtkhandlebox.xml
	* pygtk-gtkicontheme.xml pygtk-gtkimcontext.xml
	* pygtk-gtkinputdialog.xml pygtk-gtkitem.xml pygtk-gtklabel.xml