@@ -1161,9 +1161,9 @@ to use for clipping</simpara></listitem>
       <para>The <methodname>set_clip_rectangle</methodname>() method sets
 the clip mask for the graphics context from the <link
 linkend="class-gdkrectangle"><classname>gtk.gdk.Rectangle</classname></link>
-specified by <parameter>rectangle</parameter>. The clip mask is interpreted
-relative to the clip origin. See the <link
-linkend="method-gdkgc--set-clip-origin"><methodname>set_clip_origin</methodname>()</link> 
+specified by <parameter>rectangle</parameter> and sets the clip origin to
+(0, 0). The clip origin can be changed using the <link
+linkend="method-gdkgc--set-clip-origin"><methodname>set_clip_origin</methodname>()</link>
 method.</para>
 
     </refsect2>
