@@ -1,3 +1,10 @@
+2004-10-05  John Finlay  <finlay@moeraki.com>
+
+	* pygtk2-ref.xml Bump version number and set pubdate
+
+	* pygtk-gdkgc.xml (set_clip_rectangle) Note that the clip origin
+	is also set to (0, 0) per Rafael Villar Burke.
+
 	================ 2.4.11 ==============
 2004-10-03  John Finlay  <finlay@moeraki.com>
 
